[package]
name = "rustpython-derive-impl"
description = "Rust language extensions and macros specific to rustpython."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustpython-compiler-core = { workspace = true }
rustpython-parser-core = { workspace = true }
rustpython-doc = { workspace = true }

itertools = { workspace = true }
once_cell = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

maplit = "1.0.2"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn-ext = { version = "0.5.0", features = ["full"] }
textwrap = { version = "0.16.1", default-features = false }

[lints]
workspace = true