[package]
name = "rustpython-derive"
version = "0.3.1"
description = "Rust language extensions and macros specific to rustpython."
authors = ["RustPython Team"]
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["malachite-bigint"]
malachite-bigint = ["rustpython-compiler/malachite-bigint", "rustpython-derive-impl/malachite-bigint"]
num-bigint = ["rustpython-compiler/num-bigint", "rustpython-derive-impl/num-bigint"]

[dependencies]
rustpython-compiler = { workspace = true, default-features = false }
rustpython-derive-impl = { workspace = true, default-features = false }
syn = { workspace = true }

[lints]
workspace = true