[package]
name = "rustpython-derive"
description = "Rust language extensions and macros specific to rustpython."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
rustpython-compiler = { workspace = true }
rustpython-derive-impl = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true