[package]
name = "rustpython-jit"
description = "Experimental JIT(just in time) compiler for python code."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

autotests = false

[dependencies]
rustpython-compiler-core = { workspace = true }

num-traits = { workspace = true }
thiserror = { workspace = true }

cranelift = "0.88.0"
cranelift-jit = "0.88.0"
cranelift-module = "0.88.0"

[dependencies.libffi]
version = "3.1.0"
features = ["system"]

[dev-dependencies]
rustpython-derive = { path = "../derive", version = "0.4.0" }

approx = "0.5.1"

[[test]]
name = "integration"
path = "tests/lib.rs"

[lints]
workspace = true