[package]
name = "rustpython-parser"
version = "0.1.2"
description = "Parser for python code."
authors = [ "RustPython Team" ]
build = "build.rs"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2021"

[build-dependencies]
tiny-keccak = { version = "2", features = ["sha3"] }
phf_codegen = "0.10"

[dependencies]
rustpython-ast = { path = "../ast" }
lalrpop-util = "0.19.7"
log = "0.4.16"
num-bigint = "0.4.3"
num-traits = "0.2.14"
unic-emoji-char = "0.9.0"
unic-ucd-ident  = "0.9.0"
unicode_names2 = "0.5.0"
phf = "0.10.1"
ahash = "0.7.6"

[dev-dependencies]
insta = "1.14.0"
