[package]
name = "rustpython-pylib"
version = "0.3.1"
authors = ["RustPython Team"]
description = "A subset of the Python standard library for use with RustPython"
repository = "https://github.com/RustPython/RustPython"
license-file = "Lib/PSF-LICENSE"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs", "Lib/", "!Lib/**/test/", "!Lib/**/*.pyc"]

[features]
default = ["malachite-bigint"]
freeze-stdlib = []
malachite-bigint = [
    "rustpython-derive/malachite-bigint",
]
num-bigint = [
    "rustpython-derive/num-bigint",
]

[dependencies]
rustpython-compiler-core = { workspace = true }
rustpython-derive = { version = "0.3.1", default-features = false, path = "../derive" }

[build-dependencies]
glob = { workspace = true }

[lints]
workspace = true