[package]
name = "rustpython-pylib"
version = "0.3.1"
authors = ["RustPython Team"]
description = "A subset of the Python standard library for use with RustPython"
repository = "https://github.com/RustPython/RustPython"
license-file = "Lib/PSF-LICENSE"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs", "Lib/", "!Lib/**/test/", "!Lib/**/*.pyc"]

[features]
freeze-stdlib = []

[dependencies]
rustpython-compiler-core = { workspace = true }
rustpython-derive = { version = "0.3.1", path = "../derive" }

[build-dependencies]
glob = { workspace = true }
