[package]
name = "rustpython-stdlib"
description = "RustPython standard libraries in Rust."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compiler"]
compiler = ["rustpython-vm/compiler"]
threading = ["rustpython-common/threading", "rustpython-vm/threading"]
sqlite = ["dep:libsqlite3-sys"]
ssl = ["openssl", "openssl-sys", "foreign-types-shared", "openssl-probe"]
ssl-vendor = ["ssl", "openssl/vendored"]
tkinter = ["dep:tk-sys", "dep:tcl-sys"]

[dependencies]
# rustpython crates
rustpython-derive = { workspace = true }
rustpython-vm = { workspace = true, default-features = false }
rustpython-common = { workspace = true }

ahash = { workspace = true }
ascii = { workspace = true }
cfg-if = { workspace = true }
crossbeam-utils = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
num-complex = { workspace = true }
malachite-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
num_enum = { workspace = true }
parking_lot = { workspace = true }

memchr = { workspace = true }
base64 = "0.22"
csv-core = "0.1.11"
dyn-clone = "1.0.10"
pymath = { workspace = true }
xml = "1.0"

# random
rand_core = { workspace = true }
mt19937 = "3.1"

# Crypto:
digest = "0.10.3"
md-5 = "0.10.1"
sha-1 = "0.10.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
blake2 = "0.10.4"

## unicode stuff
unicode_names2 = { workspace = true }
# TODO: use unic for this; needed for title case:
# https://github.com/RustPython/RustPython/pull/832#discussion_r275428939
unicode-casing = { workspace = true }
# update version all at the same time
unic-char-property = { workspace = true }
unic-normal        = { workspace = true }
unic-ucd-bidi      = { workspace = true }
unic-ucd-category  = { workspace = true }
unic-ucd-age       = { workspace = true }
unic-ucd-ident     = { workspace = true }
ucd = "0.1.1"
unicode-bidi-mirroring = { workspace = true }

# compression
adler32 = "1.2.0"
crc32fast = "1.3.2"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
libz-sys = { package = "libz-rs-sys", version = "0.5" }
bzip2 = "0.6"

# tkinter
tk-sys = { git = "https://github.com/arihant2math/tkinter.git", tag = "v0.2.0", optional = true }
tcl-sys = { git = "https://github.com/arihant2math/tkinter.git", tag = "v0.2.0", optional = true }

# uuid
[target.'cfg(not(any(target_os = "ios", target_os = "android", target_os = "windows", target_arch = "wasm32", target_os = "redox")))'.dependencies]
mac_address = "1.1.3"
uuid = { version = "1.1.2", features = ["v1"] }

# mmap
[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
memmap2 = "0.5.10"
page_size = "0.6"

[target.'cfg(all(unix, not(target_os = "redox"), not(target_os = "ios")))'.dependencies]
termios = "0.3.3"

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gethostname = "1.0.2"
socket2 = { version = "0.6.0", features = ["all"] }
dns-lookup = "3.0"
openssl = { version = "0.10.72", optional = true }
openssl-sys = { version = "0.9.80", optional = true }
openssl-probe = { version = "0.1.5", optional = true }
foreign-types-shared = { version = "0.3.1", optional = true }

[target.'cfg(not(any(target_os = "android", target_arch = "wasm32")))'.dependencies]
libsqlite3-sys = { version = "0.28", features = ["bundled"], optional = true }
lzma-sys = "0.1"
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
paste = { workspace = true }
schannel = { workspace = true }
widestring = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Security_Cryptography",
  "Win32_System_Environment",
  "Win32_System_IO"
]

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6.1"

[lints]
workspace = true
