[package]
name = "rustpython_wasm"
version = "0.1.0"
authors = ["Ryan Liddle <ryan@rmliddle.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = []

[dependencies]
rustpython_parser = {path = "../parser"}
rustpython_vm = {path = "../vm"}
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console", "Document", "Element", "HtmlTextAreaElement", "Window" ]


[profile.release]
opt-level = "s"
