[package]
name = "rustpython-ast"
version = "0.2.0"
authors = ["RustPython Team"]
edition = "2021"

[features]
default = ["constant-optimization", "fold"]
constant-optimization = ["fold"]
fold = []
unparse = ["rustpython-common"]

[dependencies]
num-bigint = "0.4.3"
rustpython-compiler-core = { path = "../core", version = "0.2.0" }
rustpython-common = { path = "../../common", version = "0.2.0", optional = true }
