[package]
name = "rustpython-ast"
version = "0.2.0"
description = "AST definitions for RustPython"
authors = ["RustPython Team"]
edition = "2021"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"

[features]
default = ["constant-optimization", "fold"]
constant-optimization = ["fold"]
fold = []

[dependencies]
ruff_text_size =  { path = "../../ruff_text_size" }

num-bigint = { workspace = true }
