[package]
name = "rustpython-codegen"
description = "Compiler for python code into bytecode for the rustpython VM."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
# rustpython-ast = { workspace = true, features=["unparse", "constant-optimization"] }
# rustpython-parser-core = { workspace = true }
rustpython-compiler-core = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ruff_source_file = { workspace = true }
ruff_python_codegen = { workspace = true }

ahash = { workspace = true }
bitflags = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# rustpython-parser = { workspace = true }

insta = { workspace = true }

[lints]
workspace = true
