[package]
name = "rustpython-compiler-core"
description = "RustPython specific bytecode."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustpython-parser-core = { workspace = true, features=["location"] }

bitflags = { workspace = true }
itertools = { workspace = true }
malachite-bigint = { workspace = true }
num-complex = { workspace = true }
serde = { version = "1.0.133", optional = true, default-features = false, features = ["derive"] }

lz4_flex = "0.11"

[lints]
workspace = true