[package]
name = "rustpython-parser"
version = "0.2.0"
description = "Parser for python code."
authors = ["RustPython Team"]
build = "build.rs"
repository = "https://github.com/RustPython/RustPython"
license = "MIT"
edition = "2021"

[build-dependencies]
anyhow = "1.0.45"
phf_codegen = "0.11.1"
tiny-keccak = { version = "2", features = ["sha3"] }

[dependencies]
rustpython-ast = { path = "../ast", version = "0.2.0" }
rustpython-compiler-core = { path = "../core", version = "0.2.0" }

ahash = "0.7.6"
itertools = "0.10.3"
log = "0.4.16"
num-bigint = "0.4.3"
num-traits = "0.2.14"
phf = "0.11.1"
rustc-hash = "1.1.0"
thiserror = "1.0"
unic-emoji-char = "0.9.0"
unic-ucd-ident  = "0.9.0"
unicode_names2 = "0.5.0"
peg = "0.8"

[dev-dependencies]
insta = "1.14.0"
