[package]
name = "rustpython-capi"
description = "Minimal CPython C-API compatibility exports for RustPython"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags.workspace = true
num-complex.workspace = true
rustpython-vm = { workspace = true, features = ["threading", "compiler"]}

[features]
# Enable PyObject_CallMethodObjArgs variadic function, which is only available on nightly Rust.
nightly = []

[dev-dependencies]
pyo3 = { git = "https://github.com/bschoenmaeckers/pyo3", branch = "RustPython", features = ["auto-initialize", "abi3"] }

[lints]
workspace = true
