[package]
name = "rustpython-common"
description = "General python functions and algorithms for use in RustPython"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
threading = ["parking_lot", "std"]
wasm_js = ["getrandom/wasm_js"]

[dependencies]
rustpython-literal = { workspace = true }
rustpython-wtf8 = { workspace = true }

ascii = { workspace = true }
bitflags = { workspace = true }
getrandom = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
malachite-bigint = { workspace = true }
malachite-q = { workspace = true }
malachite-base = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true, optional = true }
unicode_names2 = { workspace = true }
radium = { workspace = true }

lock_api = { workspace = true }
siphasher = { workspace = true }
num-complex = { workspace = true }

[lints]
workspace = true
