[package]
name = "rustpython-compiler-source"
description = "(DEPRECATED) RustPython Source and Index"
version = "0.5.0+deprecated"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }

[lints]
workspace = true
